connect FacadeWin API with the main flow of the program