@@ -7,6 +7,9 @@ import utils.*;
 public class ChowChecker {
 	public static ArrayList<Meld> checkChow(ArrayList<Tile> wall, Tile another) {
 		ArrayList<Meld> result = new ArrayList<>();
+		if(another.getType()!=Type.BAMBOO && another.getType()!=Type.CHARACTER && another.getType()!=Type.DOT) {
+			return result;
+		}
 		//check chow
 		for(Tile a : wall) {
 			if(a.getType() == another.getType() && a.getRankIndex() == another.getRankIndex()-1) {
@@ -36,11 +39,12 @@ public class ChowChecker {
 				break;
 			}
 		}
-//		System.out.println(result.get(3).getcomb_type());
-//		System.out.println(result.get(3).getFirst().getChnName());
-//		System.out.println(result.get(3).getSecond().getChnName());
-//		System.out.println(result.get(3).getThird().getChnName());
-//		System.out.println(result.get(3).getForth().getChnName());
+//		System.out.println(result.size());
+//		System.out.println(result.get(0).getcomb_type());
+//		System.out.println(result.get(0).getFirst().getChnName());
+//		System.out.println(result.get(0).getSecond().getChnName());
+//		System.out.println(result.get(0).getThird().getChnName());
+//		System.out.println(result.get(0).getForth().getChnName());
 		return result;
 	}
 	
